--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers" />
+    <Folder Include="Utils" />
   </ItemGroup>
 
 </Project>
