--- a/backend/API/API.csproj
+++ b/backend/API/API.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.19.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos" />
+  </ItemGroup>
+
 </Project>
