--- a/backend/Tests/Tests.csproj
+++ b/backend/Tests/Tests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\API\API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validation" />
+  </ItemGroup>
+
 </Project>
