--- a/timetracking-frontend/package.json
+++ b/timetracking-frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.27.2",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.3"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
