--- a/timetracking-frontend/package.json
+++ b/timetracking-frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "12.2.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
